feat: 마이페이지 연속 일기 작성 일수 계산 및 주요 감정 포맷 개선
- MyPageService.java - 연속 일기 작성 일수(어제까지) 계산 메서드 분리 및 적용, 주요 감정 해시태그+공백 포맷으로 가공
- DiaryRepository.java - 유저의 모든 일기를 최신순으로 조회하는 메서드(findByUserOrderByCreatedAtDesc) 추가
- DailyCommentRepository.java - 유저의 가장 최근 DailyComment 조회 메서드(findTopByUserOrderByCreatedAtDesc) 추가
- CommentEmotionMappingRepository.java - 주요 감정 이름만 반환하는 @Query 적용